# passcode-link-mailer

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
src/simple_gmail_confirmer/: PasscodeLinkMailer.py  __init__.py
src/simple_mailer/: __init__.py  passcode_link_mailer.py
src/simple_mailer/templates/: minimal_template.html  modern_template.html  standard_template.html
